--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@media (min-width: 600px) {
 body{
     padding: 0;
     margin: 0;
@@ -215,7 +216,7 @@ body{
     background-color: rgba(255, 255, 255, 0.04);
     box-shadow: 20px 20px 15px rgba(0, 0, 0, 0.5);
     border-radius: 20%;
-    width: 50vw;
+    width: 40vw;
     height: 80vh;
     margin-right: 10%;
     display: flex;
@@ -299,4 +300,5 @@ color: white;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
+}
 }
