--- a/style-mobile.css
+++ b/style-mobile.css
@@ -3,15 +3,12 @@
         padding: 0;
         margin: 0;
         overflow-x: hidden;
-        background: url('background2.JPEG') no-repeat center center fixed; 
-        background-size: cover;
     }
     html, body {
         position:relative;
         overflow-x:hidden;
       }
     .topbar{
-    
         width: 100vw;
         height: 20vh;
         display: flex;
@@ -36,9 +33,43 @@
     .background2{
         position: absolute;
         width: 100vw;
-        height: 200vh;
+        height: 250vh;
+        top:100vh;
+    }
+    .background3{
+        position: absolute;
+        width: 100vw;
+        height: 250vh;
         top:250vh;
     }
+    .aboutus{
+        width: 90%;
+        height: 90%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    .aboutus h1{
+        color: white;
+        font-size: 40px;
+        text-align: center;
+        font-family: "Poppins", sans-serif;
+        font-weight: 700;
+        font-style: normal;
+    }
+    .aboutus p{
+        color: white;
+        font-size: 15px;
+        text-align: center;
+        font-family: "Poppins", sans-serif;
+        font-weight: 700;
+        font-style: normal;
+        text-align: center;
+        overflow-wrap: break-word;
+        width: 100%;
+        height: 100%;
+     }
     .nikeBanner{
         position:relative;
         height: 100vh;
@@ -123,7 +154,18 @@
         align-items: center;
         justify-content: center;
     }
-    
+    .banner6{
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        top:400vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        opacity: 1;
+        flex-direction: column;
+        transition: opacity 0.5s ease-out;
+    }
     .pallot{
         width: 25%;
         height: 5%;
