--- a/style-mobile.css
+++ b/style-mobile.css
@@ -10,10 +10,25 @@
       }
     .topbar{
         width: 100vw;
-        height: 20vh;
+        height: 8vh;
         display: flex;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: center;
+        gap: 2%;
+        position:fixed;
+        z-index: 999;
+    }
+    .topbar button{
+        width: 30%;
+        height: 45%;
+        background-color: transparent;
+        border-color: transparent;
+        color: white;
+        font-size: 15px;
+        text-align: center;
+        font-family: "Poppins", sans-serif;
+        font-weight: 700;
+        font-style: normal;
     }
     .logo{
         height: 70%;
@@ -345,14 +360,6 @@
         font-family: "Poppins", sans-serif;
         font-weight: 700;
         font-style: normal;
-    }
-    .topbar{
-        position: absolute;
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        width: 100vw;
-        height: 10vh;
     }
     .image-container{
         position: absolute;
